move guts of example content in example page

--- a/index.html
+++ b/index.html
@@ -6,16 +6,7 @@
   </head>
   <body>
     <div id="app">
-      <div id="controlPanel">
-        <button id="sensor" title="sensor">🌐</button>
-        <button id="north" title="north">⬆️</button>
-        <button id="south" title="south">⬇️</button>
-        <button id="west" title="west">⬅️</button>
-        <button id="east" title="east">➡️</button>
-        <button id="reset" title="reset">🚮</button>
-      </div>
-      <div id="statusPanel"></div>
-      <div id="map"></div>
+      <!-- todo -->
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
